разделение script.js

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         window.addEventListener('load', initTelegramFromHTML);
     </script>
     
-    <script src="script.js"></script>
+    <script src="game-assets.js"></script>
+    <script src="game-controls.js"></script>
+    <script src="game-objects.js"></script>
+    <script src="game-ui.js"></script>
+    <script src="game-core.js"></script>
 </body>
 </html>
