--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    
+    <!-- Удалён html-ползунок громкости -->
     <!-- Telegram Mini App инициализация -->
     <script>
         // Инициализация Telegram Web App
