--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <!-- Галочка для теста коллизий удалена, теперь она только на canvas -->
     <!-- Удалён html-ползунок громкости -->
     <!-- Telegram Mini App инициализация -->
     <script>
