--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #7BC5CD;
+            background-color: #000;
             display: flex;
             justify-content: center;
             align-items: center;
